@@ -24,6 +24,7 @@ share/bibframe2marc-2.8.0.xsl
 share/bibframe2marc-2.8.1.xsl
 share/INFO
 SIGNATURE
+t/data/ex1.bibframe
 t/NKC-Transform-BIBFRAME2MARC-Utils/01-use.t
 t/NKC-Transform-BIBFRAME2MARC-Utils/02-version.t
 t/NKC-Transform-BIBFRAME2MARC-Utils/03-list_versions.t
@@ -31,6 +32,7 @@ t/NKC-Transform-BIBFRAME2MARC/01-use.t
 t/NKC-Transform-BIBFRAME2MARC/02-version.t
 t/NKC-Transform-BIBFRAME2MARC/03-new.t
 t/NKC-Transform-BIBFRAME2MARC/04-version.t
+t/NKC-Transform-BIBFRAME2MARC/05-transform.t
 xt/NKC-Transform-BIBFRAME2MARC-Utils/01-pod_coverage.t
 xt/NKC-Transform-BIBFRAME2MARC-Utils/02-pod.t
 xt/NKC-Transform-BIBFRAME2MARC/01-pod_coverage.t
