@@ -27,7 +27,9 @@ no_index:
 requires:
   Class::Utils: 0
   Error::Pure: 0
+  File::Object: 0
   File::Share: 0
+  Perl6::Slurp: 0
   XML::LibXML: 0
   XML::LibXSLT: 0
   perl: 5.8.0
