@@ -20,7 +20,9 @@ readme_from 'BIBFRAME2MARC.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0;
 requires 'Error::Pure' => 0;
+requires 'File::Object' => 0;
 requires 'File::Share' => 0;
+requires 'Perl6::Slurp' => 0;
 requires 'XML::LibXML' => 0;
 requires 'XML::LibXSLT' => 0;
 requires 'perl' => '5.8.0';
