@@ -1,0 +1,509 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:bf="http://id.loc.gov/ontologies/bibframe/" xmlns:bflc="http://id.loc.gov/ontologies/bflc/" xmlns:madsrdf="http://www.loc.gov/mads/rdf/v1#">
+  <bf:Work rdf:about="http://example.org/nkc20172955079#Work">
+    <bf:adminMetadata>
+      <bf:AdminMetadata>
+        <bf:generationProcess>
+          <bf:GenerationProcess>
+            <rdfs:label>DLC marc2bibframe2 v2.5.0</rdfs:label>
+            <bf:generationDate rdf:datatype="http://www.w3.org/2001/XMLSchema#dateTime">2024-06-21T19:47:56+02:00</bf:generationDate>
+          </bf:GenerationProcess>
+        </bf:generationProcess>
+        <bf:status>
+          <bf:Status rdf:about="http://id.loc.gov/vocabulary/mstatus/n">
+            <rdfs:label>new</rdfs:label>
+          </bf:Status>
+        </bf:status>
+        <bflc:encodingLevel>
+          <bflc:EncodingLevel rdf:about="http://id.loc.gov/vocabulary/menclvl/f">
+            <rdfs:label>full</rdfs:label>
+          </bflc:EncodingLevel>
+        </bflc:encodingLevel>
+        <bf:descriptionConventions>
+          <bf:DescriptionConventions rdf:about="http://id.loc.gov/vocabulary/descriptionConventions/isbd">
+            <bf:code>isbd</bf:code>
+          </bf:DescriptionConventions>
+        </bf:descriptionConventions>
+        <bf:identifiedBy>
+          <bf:Local>
+            <rdf:value>nkc20172955079</rdf:value>
+            <bf:assigner>
+              <bf:Agent>
+                <bf:code>CZ PrNK</bf:code>
+              </bf:Agent>
+            </bf:assigner>
+          </bf:Local>
+        </bf:identifiedBy>
+        <bf:changeDate rdf:datatype="http://www.w3.org/2001/XMLSchema#dateTime">2018-02-05T16:21:31</bf:changeDate>
+        <bf:creationDate rdf:datatype="http://www.w3.org/2001/XMLSchema#date">2017-11-14</bf:creationDate>
+        <bf:assigner>
+          <bf:Agent>
+            <bf:code>BOA001</bf:code>
+          </bf:Agent>
+        </bf:assigner>
+        <bf:descriptionLanguage>
+          <bf:Language rdf:about="http://id.loc.gov/vocabulary/languages/cze"/>
+        </bf:descriptionLanguage>
+        <bf:descriptionConventions>
+          <bf:DescriptionConventions rdf:about="http://id.loc.gov/vocabulary/descriptionConventions/rda">
+            <bf:code>rda</bf:code>
+          </bf:DescriptionConventions>
+        </bf:descriptionConventions>
+      </bf:AdminMetadata>
+    </bf:adminMetadata>
+    <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Text"/>
+    <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Monograph"/>
+    <bf:language>
+      <bf:Language rdf:about="http://id.loc.gov/vocabulary/languages/cze"/>
+    </bf:language>
+    <bf:intendedAudience>
+      <bf:IntendedAudience rdf:about="http://id.loc.gov/vocabulary/maudience/gen">
+        <rdfs:label>general</rdfs:label>
+      </bf:IntendedAudience>
+    </bf:intendedAudience>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://id.loc.gov/authorities/genreForms/gf2014026297">
+        <rdfs:label>Drama</rdfs:label>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:subject>
+      <bf:Topic>
+        <bf:code>821.162.3-2 České drama</bf:code>
+        <bf:source>
+          <bf:Source>
+            <bf:code>Konspekt</bf:code>
+          </bf:Source>
+        </bf:source>
+      </bf:Topic>
+    </bf:subject>
+    <bf:contribution>
+      <bf:Contribution>
+        <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/PrimaryContribution"/>
+        <bf:agent>
+          <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent100-18">
+            <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+            <bflc:marcKey>1001 $aHavel, Václav,$d1936-2011$7jk01040240$4aut</bflc:marcKey>
+            <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+          </bf:Agent>
+        </bf:agent>
+        <bf:role>
+          <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/aut"/>
+        </bf:role>
+      </bf:Contribution>
+    </bf:contribution>
+    <bf:title>
+      <bf:Title>
+        <bf:mainTitle>Hry</bf:mainTitle>
+      </bf:Title>
+    </bf:title>
+    <bf:content>
+      <bf:Content rdf:about="http://id.loc.gov/vocabulary/contentTypes/txt">
+        <rdfs:label>text</rdfs:label>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/rdacontent"/>
+        </bf:source>
+      </bf:Content>
+    </bf:content>
+    <bflc:relationship>
+      <bflc:Relationship>
+        <bflc:relation>
+          <bflc:Relation rdf:about="http://id.loc.gov/ontologies/bibframe/hasSeries">
+            <rdfs:label>Has Series</rdfs:label>
+          </bflc:Relation>
+        </bflc:relation>
+        <bf:relatedTo>
+          <bf:Series rdf:about="http://example.org/nkc20172955079#Hub490-27">
+            <rdf:type rdf:resource="http://id.loc.gov/ontologies/bflc/Uncontrolled"/>
+            <bf:status>
+              <bf:Status rdf:about="http://id.loc.gov/vocabulary/mstatus/t">
+                <rdfs:label>transcribed</rdfs:label>
+              </bf:Status>
+            </bf:status>
+            <bf:title>
+              <bf:Title>
+                <bf:mainTitle>Česká knižnice ;</bf:mainTitle>
+              </bf:Title>
+            </bf:title>
+          </bf:Series>
+        </bf:relatedTo>
+        <bf:seriesEnumeration>sv. 93</bf:seriesEnumeration>
+      </bflc:Relationship>
+    </bflc:relationship>
+    <bf:tableOfContents>
+      <bf:TableOfContents>
+        <rdfs:label>Zahradní slavnost -- Vyrozumění -- Ztížená možnost soustředění -- Žebrácká opera -- Audience -- Vernisáž -- Largo desolato -- Pokoušení</rdfs:label>
+      </bf:TableOfContents>
+    </bf:tableOfContents>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-29">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>česká dramata</rdfs:label>
+        <madsrdf:authoritativeLabel>česká dramata</madsrdf:authoritativeLabel>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/czenas">
+            <bf:code>czenas</bf:code>
+          </bf:Source>
+        </bf:source>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-30">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>výbory</rdfs:label>
+        <madsrdf:authoritativeLabel>výbory</madsrdf:authoritativeLabel>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/czenas">
+            <bf:code>czenas</bf:code>
+          </bf:Source>
+        </bf:source>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-31">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>komentovaná vydání</rdfs:label>
+        <madsrdf:authoritativeLabel>komentovaná vydání</madsrdf:authoritativeLabel>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/czenas">
+            <bf:code>czenas</bf:code>
+          </bf:Source>
+        </bf:source>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-32">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>Czech drama</rdfs:label>
+        <madsrdf:authoritativeLabel>Czech drama</madsrdf:authoritativeLabel>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-33">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>selected works</rdfs:label>
+        <madsrdf:authoritativeLabel>selected works</madsrdf:authoritativeLabel>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:genreForm>
+      <bf:GenreForm rdf:about="http://example.org/nkc20172955079#GenreForm655-34">
+        <rdf:type rdf:resource="http://www.loc.gov/mads/rdf/v1#GenreForm"/>
+        <rdfs:label>annotated editions</rdfs:label>
+        <madsrdf:authoritativeLabel>annotated editions</madsrdf:authoritativeLabel>
+      </bf:GenreForm>
+    </bf:genreForm>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-35">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-35">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tZahradní slavnost$7aun2015876644</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Zahradní slavnost</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tZahradní slavnost$7aun2015876644</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-36">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-36">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tVyrozumění$7aun2017972922</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Vyrozumění</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tVyrozumění$7aun2017972922</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-37">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-37">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tZtížená možnost soustředění$7aun2017972923</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Ztížená možnost soustředění</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tZtížená možnost soustředění$7aun2017972923</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-38">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-38">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tŽebrácká opera$7aun2015855423</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Žebrácká opera</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tŽebrácká opera$7aun2015855423</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-39">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-39">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tAudience$7aun2017972924</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Audience</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tAudience$7aun2017972924</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-40">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-40">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tVernisáž$7aun2015896355</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Vernisáž</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tVernisáž$7aun2015896355</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-41">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-41">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tLargo desolato$7aun2014843891</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Largo desolato</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tLargo desolato$7aun2014843891</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bf:hasPart>
+      <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub700-42">
+        <bf:contribution>
+          <bf:Contribution>
+            <bf:agent>
+              <bf:Agent rdf:about="http://example.org/nkc20172955079#Agent700-42">
+                <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Person"/>
+                <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tPokoušení$7aun2010606823</bflc:marcKey>
+                <rdfs:label>Havel, Václav, 1936-2011</rdfs:label>
+              </bf:Agent>
+            </bf:agent>
+            <bf:role>
+              <bf:Role rdf:about="http://id.loc.gov/vocabulary/relators/ctb"/>
+            </bf:role>
+          </bf:Contribution>
+        </bf:contribution>
+        <bf:title>
+          <bf:Title>
+            <bf:mainTitle>Pokoušení</bf:mainTitle>
+          </bf:Title>
+        </bf:title>
+        <bflc:marcKey>70012$aHavel, Václav,$d1936-2011.$tPokoušení$7aun2010606823</bflc:marcKey>
+      </bf:Hub>
+    </bf:hasPart>
+    <bflc:relationship>
+      <bflc:Relationship>
+        <bflc:relation>
+          <bflc:Relation rdf:about="http://id.loc.gov/ontologies/bibframe/hasSeries">
+            <rdfs:label>Has Series</rdfs:label>
+          </bflc:Relation>
+        </bflc:relation>
+        <bf:relatedTo>
+          <bf:Hub rdf:about="http://example.org/nkc20172955079#Hub830-43">
+            <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Series"/>
+            <bf:title>
+              <bf:Title>
+                <bf:mainTitle>Česká knižnice (Host)</bf:mainTitle>
+              </bf:Title>
+            </bf:title>
+            <bflc:marcKey>830 0$aČeská knižnice (Host)</bflc:marcKey>
+          </bf:Hub>
+        </bf:relatedTo>
+      </bflc:Relationship>
+    </bflc:relationship>
+    <bf:hasInstance rdf:resource="http://example.org/nkc20172955079#Instance"/>
+  </bf:Work>
+  <bf:Instance rdf:about="http://example.org/nkc20172955079#Instance">
+    <bf:issuance rdf:resource="http://id.loc.gov/vocabulary/issuance/mono"/>
+    <bf:provisionActivity>
+      <bf:ProvisionActivity>
+        <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Publication"/>
+        <bflc:simplePlace>Praha</bflc:simplePlace>
+        <bflc:simpleAgent>Nadační fond Česká knižnice ÚČLK FF UK</bflc:simpleAgent>
+        <bflc:simpleAgent>Ústav pro českou literaturu AV ČR, v.v.i.</bflc:simpleAgent>
+      </bf:ProvisionActivity>
+    </bf:provisionActivity>
+    <bflc:publicationStatement>Praha: Nadační fond Česká knižnice ÚČLK FF UK, Ústav pro českou literaturu AV ČR, v.v.i.</bflc:publicationStatement>
+    <bf:provisionActivity>
+      <bf:ProvisionActivity>
+        <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Publication"/>
+        <bflc:simplePlace>Praha</bflc:simplePlace>
+        <bflc:simpleAgent>Nadační fond Česká knižnice ÚČLK FF UK</bflc:simpleAgent>
+        <bflc:simpleAgent>Ústav pro českou literaturu AV ČR, v.v.i.</bflc:simpleAgent>
+      </bf:ProvisionActivity>
+    </bf:provisionActivity>
+    <bflc:publicationStatement>Praha: Nadační fond Česká knižnice ÚČLK FF UK, Ústav pro českou literaturu AV ČR, v.v.i.</bflc:publicationStatement>
+    <bf:provisionActivity>
+      <bf:ProvisionActivity>
+        <rdf:type rdf:resource="http://id.loc.gov/ontologies/bibframe/Publication"/>
+        <bf:date rdf:datatype="http://id.loc.gov/datatypes/edtf">2017</bf:date>
+        <bf:place rdf:resource="http://id.loc.gov/vocabulary/countries/xr"/>
+        <bflc:simplePlace>Brno</bflc:simplePlace>
+        <bflc:simpleAgent>Host</bflc:simpleAgent>
+        <bflc:simpleDate>2017</bflc:simpleDate>
+      </bf:ProvisionActivity>
+    </bf:provisionActivity>
+    <bflc:publicationStatement>Brno: Host; 2017</bflc:publicationStatement>
+    <bf:identifiedBy>
+      <bf:Nbn>
+        <rdf:value>cnb002955079</rdf:value>
+      </bf:Nbn>
+    </bf:identifiedBy>
+    <bf:identifiedBy>
+      <bf:Isbn>
+        <rdf:value>978-80-88183-09-9</rdf:value>
+        <bf:qualifier>Nadační fond Česká knižnice</bf:qualifier>
+        <bf:qualifier>vázáno</bf:qualifier>
+      </bf:Isbn>
+    </bf:identifiedBy>
+    <bf:identifiedBy>
+      <bf:Isbn>
+        <rdf:value>978-80-88069-33-1</rdf:value>
+        <bf:qualifier>Ústav pro českou literaturu AV ČR</bf:qualifier>
+        <bf:qualifier>vázáno</bf:qualifier>
+      </bf:Isbn>
+    </bf:identifiedBy>
+    <bf:identifiedBy>
+      <bf:Isbn>
+        <rdf:value>978-80-7491-943-5</rdf:value>
+        <bf:qualifier>Host</bf:qualifier>
+        <bf:qualifier>vázáno</bf:qualifier>
+      </bf:Isbn>
+    </bf:identifiedBy>
+    <bf:identifiedBy>
+      <bf:Local>
+        <rdf:value>1019658948</rdf:value>
+        <bf:assigner>
+          <bf:Agent rdf:about="http://id.loc.gov/vocabulary/organizations/ocolc"/>
+        </bf:assigner>
+      </bf:Local>
+    </bf:identifiedBy>
+    <bf:responsibilityStatement>Václav Havel</bf:responsibilityStatement>
+    <bf:title>
+      <bf:Title>
+        <bf:mainTitle>Hry</bf:mainTitle>
+      </bf:Title>
+    </bf:title>
+    <bf:editionStatement>V České knižnici vydání první</bf:editionStatement>
+    <bf:extent>
+      <bf:Extent>
+        <rdfs:label>550 stran</rdfs:label>
+      </bf:Extent>
+    </bf:extent>
+    <bf:dimensions>21 cm</bf:dimensions>
+    <bf:media>
+      <bf:Media rdf:about="http://id.loc.gov/vocabulary/mediaTypes/n">
+        <rdfs:label>bez média</rdfs:label>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/rdamedia"/>
+        </bf:source>
+      </bf:Media>
+    </bf:media>
+    <bf:carrier>
+      <bf:Carrier rdf:about="http://id.loc.gov/vocabulary/carriers/nc">
+        <rdfs:label>svazek</rdfs:label>
+        <bf:source>
+          <bf:Source rdf:about="http://id.loc.gov/vocabulary/genreFormSchemes/rdacarrier"/>
+        </bf:source>
+      </bf:Carrier>
+    </bf:carrier>
+    <bf:supplementaryContent>
+      <bf:SupplementaryContent>
+        <rdfs:label>Obsahuje bibliografické odkazy</rdfs:label>
+      </bf:SupplementaryContent>
+    </bf:supplementaryContent>
+    <bf:instanceOf rdf:resource="http://example.org/nkc20172955079#Work"/>
+  </bf:Instance>
+</rdf:RDF>
